...
                                                <rect key="frame" x="20" y="8" width="374" height="184.66666666666666"/>
                                            </imageView>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="This NHS app does three things for you:" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" transl
                                                <rect key="frame" x="20" y="212.66666666666669" width="374" height="81.666666666666686"/>
                                                <accessibility key="accessibilityConfiguration">
...
                                                </constraints>
                                                <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                                                <state key="normal" title="Learn more about how the app works">
                                                    <color key="titleColor" name="NHS Link"/>
                                                </state>
...
                            <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8Mb-zt-2Ty" customClass="PrimaryButton" customModule="Sonar" customModuleProvider="target">
                                <rect key="frame" x="20" y="812" width="374" height="30"/>
                                <state key="normal" title="Continue"/>
                                <connections>
                                    <segue destination="lkE-bN-ikk" kind="show" id="ALH-qa-fLt"/>
...
                                                <rect key="frame" x="20" y="53" width="374" height="880"/>
                                                <subviews>
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="How the app works" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizi
                                                        <rect key="frame" x="0.0" y="0.0" width="374" height="40.666666666666664"/>
                                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                                        <rect key="frame" x="0.0" y="0.0" width="374" height="184.66666666666666"/>
                                                    </imageView>
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter the first part of your home postcode" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConst
                                                        <rect key="frame" x="0.0" y="184.66666666666669" width="374" height="81.666666666666686"/>
                                                        <accessibility key="accessibilityConfiguration">
...
                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" adjustsFontForContentSizeCategory="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="nUw-z7-nkS" customClass="TextField" customModule="Sonar" customModule
                                                        <rect key="frame" x="0.0" y="401.66666666666669" width="374" height="44"/>
                                                        <accessibility key="accessibilityConfiguration" label="Post code"/>
                                                        <constraints>
                                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="44" id="49U-zv-B9p"/>
...
                                                        <rect key="frame" x="0.0" y="0.0" width="374" height="184.66666666666666"/>
                                                    </imageView>
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Set up app permissions" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutor
                                                        <rect key="frame" x="0.0" y="194.66666666666669" width="374" height="40.666666666666657"/>
                                                        <accessibility key="accessibilityConfiguration">
...
